--- a/2-compound/package.json
+++ b/2-compound/package.json
@@ -14,7 +14,10 @@
     "#components": "./src/components"
   },
   "dependencies": {
-    "react": "^16.0.0",
-    "react-dom": "^16.12.0"
+    "classnames": "^2.2.6",
+    "react": ">= 16.8.0",
+    "react-dom": ">= 16.8.0",
+    "react-is": ">= 16.8.0",
+    "styled-components": "^5.0.1"
   }
 }
