--- a/3-dribbble-menu/package.json
+++ b/3-dribbble-menu/package.json
@@ -7,5 +7,14 @@
   },
   "scripts": {
     "watch": "parcel src/index.html"
+  },
+  "dependencies": {
+    "react": ">= 16.8.0",
+    "react-dom": ">= 16.8.0",
+    "react-is": ">= 16.8.0",
+    "styled-components": "^5.0.1"
+  },
+  "alias": {
+    "~": "./src"
   }
 }
